--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -35,7 +35,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col class="ion-margin ">        
+      <ion-col class="ion-margin">        
           Regards, Celvyn.
       </ion-col>
     </ion-row>
@@ -45,13 +45,13 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">    
     <ion-tab-button tab="show-friends">
-      <ion-icon name="logo-wechat"></ion-icon>
-    </ion-tab-button>
-    <ion-tab-button tab="add-friend">
       <ion-icon name="people-circle-outline"></ion-icon>
     </ion-tab-button>
+    <ion-tab-button tab="add-friend">
+      <ion-icon name="person-add-outline"></ion-icon>
+    </ion-tab-button>
     <ion-tab-button tab="show-map">
-      <ion-icon name="image-outline"></ion-icon>
+      <ion-icon name="navigate-outline"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="my-profile">
       <ion-icon name="person-circle-outline"></ion-icon>
