--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -1,3 +1,9 @@
 input[type="file"] {
     display: none;
   }
+
+  .profile-picture{
+    justify-content: center;
+    width: 150px;
+    height: 150px;
+}
