--- a/src/app/menu/show-friends/show-friends.page.html
+++ b/src/app/menu/show-friends/show-friends.page.html
@@ -4,6 +4,9 @@
       <ion-back-button defaultHref="/menu"></ion-back-button>
     </ion-buttons>
     <ion-title>Friend List</ion-title>
+    <ion-buttons slot="end">
+      <ion-button routerLink="/menu/add-friend"><ion-icon name="person-add-outline"></ion-icon></ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
