--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -91,6 +91,8 @@
 
     <ion-row class="ion-justify-content-center">
       <p class="go-to-login">Already have an account? <a (click)="goLoginPage()">Try to Log In</a></p>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
       <ion-button class="submit-btn" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
     </ion-row>
     
